Fix compile error for backporting
Signed-off-by: Lantao Jin <ltjin@amazon.com>